# ns3

./: .gitignore
contrib/: .gitignore
contrib/dra/: CMakeLists.txt
contrib/dra/doc/: dra.rst
contrib/dra/examples/: CMakeLists.txt  dra-example.cc
contrib/dra/helper/: dra-routing-helper.cc  dra-routing-helper.h
contrib/dra/model/: conf-loader.cc  conf-loader.h  dra-config.cc  dra-routing.cc  dra-routing.h  dra-table-entry.cc  dra-table-entry.h  dra-tag.cc  dra-tag.h  dra-utils.cc  dra-utils.h  utils.cc  utils.h
contrib/dra/test/: dra-test-suite.cc
contrib/drlf/: CMakeLists.txt
contrib/drlf/doc/: drlf.rst
contrib/drlf/examples/: CMakeLists.txt  drlf-example.cc
contrib/drlf/helper/: drlf-helper.cc  drlf-helper.h
contrib/drlf/model/: drlf-conf.cc  drlf-conf.h  drlf-routing.cc  drlf-routing.h  drlf-table.cc  drlf-table.h  drlf-tag.cc  drlf-tag.h  drlf-util.cc
contrib/drlf/test/: drlf-test-suite.cc
contrib/dsra/: CMakeLists.txt
contrib/dsra/doc/: dsra.rst
contrib/dsra/examples/: CMakeLists.txt  dsra-example.cc
scratch/: .gitignore
scratch/dra1/: dra-main-1.cc
scratch/dra2/: dra-main-2.cc
scratch/dra3/: dra-main-3.cc
scratch/drlf1/: drlf-main-1.cc
scratch/drlf2/: drlf-main-2.cc
scratch/dsra1/: dsra-main-1.cc
scratch/dsra12/: dsra-main-12.cc
scratch/dsra2/: dsra-main-2.cc
scratch/sim/: CMakeLists.txt  dra-example.cc
scratch/sim/res/: starlink-1.txt  test-1.txt
scratch/sim/utils/: utils.cc  utils.h
script/: dra1.sh  dra2.sh  dra3.sh  drlf1.sh  drlf2.sh  dsra1.sh  dsra12.sh  dsra2.sh
src/satellite/: CMakeLists.txt
(+21 files in other folders)
